--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-ONIT. Using in Fond project => HelperOffsetPoints
+<b>ONIT. Using in Fond project => HelperOffsetPoints</b>
 
 =====================================================================
 Clipper Change Log
