--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-<b>ONIT. Using in Fond project => HelperOffsetPoints</b>
+ONIT. Using in Fond project => HelperOffsetPoints
 
 =====================================================================
 Clipper Change Log
